ensure attribution readability

--- a/ClientApp/src/Styles/Screens/DWMap.css
+++ b/ClientApp/src/Styles/Screens/DWMap.css
@@ -15,3 +15,7 @@
     max-height: 40%;
     overflow: hidden;
 }
+
+.maptalks-attribution{
+    color: var(--main);
+}
